Closed
Bug 177661
Opened 23 years ago
Closed 23 years ago
2 frame GIFs do not animate
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: mozilla, Assigned: paper)
References
()
Details
Attachments
(1 file, 3 obsolete files)
1.16 KB,
patch
|
Biesinger
:
review+
tor
:
superreview+
roc
:
approval+
|
Details | Diff | Splinter Review |
Some animated GIFs don't animate. The UF comic in the URL should change after
30 seconds, but it doesn't. When I reload the page (without refreshing) the
image changes. Again: some GIFs animate, some don't. Can't really put my
finger on it what causes it.
The image located at the URL works with IE6, Mozilla 1.2b and Konquerer.
Reporter | ||
Comment 1•23 years ago
|
||
Just tested the same picture in Phoenix 0.4 for Linux, and it has the same
misbehaviour there.
Comment 2•23 years ago
|
||
This isn't Phoenix specific. It's the same behavior in the latest Mozilla nightly.
Component: General → Image: Layout
Product: Phoenix → Browser
Version: unspecified → other
Comment 3•23 years ago
|
||
In Bug 119597 you should find a bug to dupe this bug to.
Assignee | ||
Comment 4•23 years ago
|
||
AH! Regression from Bug 110076.
Need this in ASAP!
StartAnimation checked to see if there are more than 1 frame before starting
animation. AppendElement moved to before StartAnimation call so that
StartAnimation sees more than one frame.
Assignee | ||
Comment 5•23 years ago
|
||
Expanding this bug to all 2 framed gifs.
CCing people to r= and sr= asap. Very important to get this into 1.2!
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: GIF doesn't animate → 2 frame GIFs do not animate
Assignee | ||
Updated•23 years ago
|
Comment 6•23 years ago
|
||
+ // Put the following line in place when Bug 130544 gets fixed
why not just put these lines into a patch in that bug.
have no time for a real review right now. will do that in an hour or so.
Assignee | ||
Comment 7•23 years ago
|
||
Removed comments as per Comment #6
Still forcing return of NS_OK, instead of what AppendElement returns (which is
currenty not a nsresult)
Attachment #104781 -
Attachment is obsolete: true
Assignee | ||
Comment 8•23 years ago
|
||
Comment on attachment 104788 [details] [diff] [review]
Animate 2 Framed GIFs
sorry everyone, this patch isn't correct.
For now, the best option is to back out Bug 110076. Now is not a good time to
introduce new code ;)
Attachment #104788 -
Flags: needs-work+
Assignee | ||
Updated•23 years ago
|
Assignee | ||
Comment 9•23 years ago
|
||
(Looks like I had more time than I thought)
- Chunk #2. Moved AppendElement to before StartAnimation() call because
StartAnimation checks if mFrames.count > 1 before starting animation.
- After StartAnimation checks the count, it gets the current frame's timeout.
The current frame is mCompositingFrame, not mFrames(0), and
mCompositingFrame.timeout was 0. This was the problem with the previous patch,
the 2nd frame would show immediately after the first. Solution is to set
mCompositingFrame's timeout to mFrames(0).timemout (Chunk #1).
I've tested this patch on various GIFs and it appears to work.
Attachment #104788 -
Attachment is obsolete: true
Comment 10•23 years ago
|
||
Comment on attachment 104871 [details] [diff] [review]
Animate 2 Framed GIFs
r=biesi if you fix the parens here:
+ if NS_SUCCEEDED(firstFrame->GetTimeout(&timeout))
(as discussed on irc)
Attachment #104871 -
Flags: review+
Assignee | ||
Comment 11•23 years ago
|
||
((brackets) are good)
;)
Attachment #104871 -
Attachment is obsolete: true
Comment 12•23 years ago
|
||
Comment on attachment 104873 [details] [diff] [review]
Animate 2 Framed GIFs
r=biesi
Attachment #104873 -
Flags: review+
Comment 13•23 years ago
|
||
This is now on the 1.2 blocker list. We need to get this fixed.
Comment 14•23 years ago
|
||
Comment on attachment 104873 [details] [diff] [review]
Animate 2 Framed GIFs
sr=tor
Attachment #104873 -
Flags: superreview+
Comment 15•23 years ago
|
||
fixing component, assignee & qa contact
Assignee: blaker → paper
Component: Image: Layout → ImageLib
QA Contact: asa → tpreston
Comment on attachment 104873 [details] [diff] [review]
Animate 2 Framed GIFs
a=roc+moz for trunk
Attachment #104873 -
Flags: approval+
Comment 17•23 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•