bug 177661 patch by paper@animecity.nu r=biesi sr=tor a=roc+moz 2 frame GIFs do not animate